# dominus

./: Makefile.am  README.md  configure.ac
rpi3/: Makefile.am  README.md
rpi3/bash/: build_docker.sh  copy_from_docker.sh  copy_to_docker.sh  scp_docker_rpi3.sh
rpi3/init/: relay_init
rpi3/libs/: Makefile.am  README.md  gpio_set.c  gpio_set.h  server_client.c  server_client.h  server_host.c  server_host.h
rpi3/scripts/: switch_off.sh  switch_on.sh
rpi3/src/: Makefile.am  README.md  domoticz_side.c  gpio_set  gpio_set.c  relay_side.c  server_client.c  server_host.c
