MAINTAINERCLEANFILES = Makefile.in gpio_set.la server_client.la server_host.la

lib_LTLIBRARIES = libgpio_set.la libserver_host.la libserver_client.la

libgpio_set_la_SOURCES = gpio_set.c gpio_set.h
libserver_host_la_SOURCES = server_host.c server_host.h
libserver_client_la_SOURCES = server_client.c server_client.h
